--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^1.0.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.6",
@@ -22,7 +24,10 @@
     "eslint-config-next": "13.4.16",
     "flowbite": "^1.8.1",
     "lucide-react": "^0.268.0",
+    "mongodb": "^5.8.1",
+    "mongoose": "^7.4.4",
     "next": "13.4.16",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
