--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
     "lucide-react": "^0.268.0",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.4",
@@ -35,5 +37,9 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.21",
+    "typescript": "5.2.2"
   }
 }
