--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^1.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-radio-group": "^1.1.3",
@@ -24,7 +26,6 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "flowbite": "^1.8.1",
-    "flowbite-react": "^0.5.0",
     "lucide-react": "^0.268.0",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.4",
@@ -36,7 +37,8 @@
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "18.2.21",
